Fixed px to rem, images sizes and description dark mode

--- a/src/pages/utils/globals.css
+++ b/src/pages/utils/globals.css
@@ -64,19 +64,19 @@
 .prose.prose-custom .man {
   color: rgb(101, 165, 224);
   font-weight: bold;
-  letter-spacing: 0.103px;
+  letter-spacing: 0.006rem;
 }
 
 .prose.prose-custom .cld {
   color: #cbbd44;
   font-weight: bold;
-  letter-spacing: 0.021px;
+  letter-spacing: 0.001rem;
 }
 
 .prose.prose-custom .cst {
   color: #ababab;
   font-weight: bold;
-  letter-spacing: 0.563px;
+  letter-spacing: 0.035rem;
 }
 
 .prose.prose-custom .dmg {
@@ -91,22 +91,22 @@
 
 .prose.prose-custom .rad {
   font-weight: bold;
-  letter-spacing: -0.334px;
+  letter-spacing: -0.021rem;
 }
 
 .prose.prose-custom .rng {
   font-weight: bold;
-  letter-spacing: 0.258px;
+  letter-spacing: 0.016rem;
 }
 
 .prose.prose-custom .trg {
   font-weight: bold;
-  letter-spacing: 0.370px;
+  letter-spacing: 0.023rem;
 }
 
 .prose.prose-custom .prc {
   font-weight: bold;
-  letter-spacing: 0.329px;
+  letter-spacing: 0.021rem;
 }
 
 .prose.prose-custom .syn {
